@@ -6,21 +6,26 @@
 
 #include "../../src/escape.h"
 
+#define INV_START "\033[7,1m"
+#define INV_END "\033[27,22m"
+
 static regex_t re1c;
 static regex_t re2c;
+static regex_t re3c;
+static regex_t re4c;
 
 SETUP()
 {
-	int err;
-
-	err = regcomp(&re1c, "a", 0);
-	assert_int_equal(0, err);
-	err = regcomp(&re2c, "ab", 0);
-	assert_int_equal(0, err);
+	assert_success(regcomp(&re1c, "a", 0));
+	assert_success(regcomp(&re2c, "ab", 0));
+	assert_success(regcomp(&re3c, "$", 0));
+	assert_success(regcomp(&re4c, "a?", REG_EXTENDED));
 }
 
 TEARDOWN()
 {
+	regfree(&re4c);
+	regfree(&re3c);
 	regfree(&re2c);
 	regfree(&re1c);
 }
@@ -85,6 +90,42 @@ TEST(esc_in_input_are_ignored)
 	const char *const input = "FOO" "\033[7,1m" "a" "\033[27,22m" "BAR";
 	const char *const expected = "FOO" "\033[7,1m" "\033[7,1m" "a" "\033[27,22m" "\033[27,22m" "BAR";
 	char *const actual = esc_highlight_pattern(input, &re1c);
+	assert_string_equal(expected, actual);
+	free(actual);
+}
+
+TEST(empty_match)
+{
+	const char *const input = "anything";
+	const char *const expected = "anything";
+	char *const actual = esc_highlight_pattern(input, &re3c);
+	assert_string_equal(expected, actual);
+	free(actual);
+}
+
+TEST(match_on_empty_line)
+{
+	const char *const input = "";
+	const char *const expected = "";
+	char *const actual = esc_highlight_pattern(input, &re3c);
+	assert_string_equal(expected, actual);
+	free(actual);
+}
+
+TEST(non_empty_match_after_empty_match)
+{
+	const char *const input = " a";
+	const char *const expected = " " INV_START "a" INV_END;
+	char *const actual = esc_highlight_pattern(input, &re4c);
+	assert_string_equal(expected, actual);
+	free(actual);
+}
+
+TEST(non_empty_match_after_empty_matche_with_esc)
+{
+	const char *const input = "\033[7,1m" " a";
+	const char *const expected = "\033[7,1m" " " INV_START "a" INV_END;
+	char *const actual = esc_highlight_pattern(input, &re4c);
 	assert_string_equal(expected, actual);
 	free(actual);
 }
