@@ -88,6 +88,9 @@
 
 	Fixed "(n + 1) of n" in detailed progress dialog.
 
+	Fixed infinite loop or crash on empty match on search in view mode (e.g.
+	on /$).
+
 0.7.8 to 0.8-beta
 
 	Removed per-view last search pattern.  Don't worry, you probably won't
